[build-system]
requires      = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "pyEDM"
requires-python = ">=3.9"
dynamic         = ["version"]
dependencies    = [ "numpy>=1.26",
                    "scipy>=1.11", 
                    "scikit-learn>=1.3",
                    "pandas>=2.0",
                    "matplotlib>=3.7", ]
authors = [
  {name = "Joseph Park", email = "JosephPark@IEEE.org"},
]
maintainers = [
  {name = "Joseph Park", email = "JosephPark@IEEE.org"}
]
description = "Python/Pandas toolset for Empirical Dynamic Modeling."
readme      = "README.md"
license     = {file = "LICENSE"}
keywords    = ['EDM', 'Empirical Dynamic Modeling', 'nonlinear dynamics',
               'time series', 'state space' ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "pyEDM.__version__"}

[project.urls]
Homepage      = "https://deepeco.ucsd.edu/"
Documentation = "https://sugiharalab.github.io/EDM_Documentation/"
Repository    = "https://github.com/SugiharaLab/pyEDM"
"Bug Tracker" = "https://github.com/SugiharaLab/pyEDM/issues"
