[project]
name            = "pyEDM"
description     = "Python/Pandas toolset for Empirical Dynamic Modeling."
requires-python = ">=3.10"
dynamic         = ["version"]
dependencies    = [ "numpy",
                    "scipy", 
                    "scikit-learn",
                    "pandas>=2.0",
                    "matplotlib>=3.7", ]
authors = [
  {name = "Joseph Park", email = "JosephPark@IEEE.org"},
]
maintainers = [
  {name = "Joseph Park", email = "JosephPark@IEEE.org"}
]
readme        = "README.md"
license       = "LicenseRef-UCSD-License"
license-files = ["LICENSE"]
keywords      = ['EDM', 'Empirical Dynamic Modeling', 'nonlinear dynamics',
                 'time series', 'state space' ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage      = "https://deepeco.ucsd.edu/"
Documentation = "https://sugiharalab.github.io/EDM_Documentation/"
Repository    = "https://github.com/SugiharaLab/pyEDM"
Issues        = "https://github.com/SugiharaLab/pyEDM/issues"

[tool.pdm.version]
source = "file"
path   = "src/pyEDM/__init__.py"

[tool.pdm.build]
includes = ["apps", "src"]

[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"
